# wechat-chatbot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  bing.py  build.sh  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  bing.py  chatgpt.py  data.py
